syntax = "proto3";

package proto;

option go_package = "./protos";

service AnalitycsService {
  rpc TrackEvent(TrackEventRequest) returns (TrackEventResponse);
}

message TrackEventRequest {
  string raw_url = 1;
  string short_code = 2;
  string user_agent = 3;
  int64 timestamp = 4;

}

message TrackEventResponse {
  bool success = 1;

}
